# osqp_ros2

./: CMakeLists.txt  Readme.md  package.xml
include/: optimization.hpp
src/: op_node.cpp  optimization.cpp
